--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -11,7 +10,7 @@
     </parent>
     
     <artifactId>github-test-utils</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <name>Test Utilities Package</name>
     <description>small collection of small utilities helpful for testing</description>
@@ -51,7 +50,7 @@
         <connection>scm:git:git://github.com/jjYBdx4IL/github-test-utils.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jjYBdx4IL/github-test-utils.git</developerConnection>
         <url>https://github.com/jjYBdx4IL/github-test-utils</url>
-        <tag>HEAD</tag>
+        <tag>1.0</tag>
     </scm>
 
     <build>
