--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
     <dependencies>
         <!-- sorted by artifactId -->
         <dependency>
+            <groupId>com.github.jjYBdx4IL.utils</groupId>
+            <artifactId>junit4-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        
+        
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
